# holistic_framework_for_lpwan_protocol_development

./: LICENSE  README.md  justfile
components/: README.md
components/analysis/: .dir-locals.el  README.md  pyproject.toml
components/analysis/src/lightning_event_log_analysis/: __init__.py  analysis.py  lib.py  timeline.py
components/cloud/: Cargo.toml  README.md
components/cloud/src/: client.rs  crc.rs  elf.rs  main.rs  slab.rs
components/debug hat/: README.md  cloud.py  cobs.py  main.py  node.py  stm32bootloader.py  watchdog.py
components/debug hat/cbor2/: README.md
components/firmware/: .dir-locals.el  Cargo.toml  README.md
components/firmware/.cargo/: config.toml
components/firmware/src/: iv.rs  main.rs
components/protocol/: .dir-locals.el  Cargo.toml  README.md
components/protocol/api/: Cargo.toml
components/protocol/api/src/: lib.rs
components/protocol/lightning/: Cargo.toml
components/protocol/lightning/src/: channel.rs  context.rs  event_log.rs  lib.rs  lightning.rs  message.rs  state_machine.rs  states.rs  window.rs
components/simulator/: Cargo.toml  README.md
components/simulator/src/: logger.rs  main.rs  sim.rs
libraries/protocol_event_writer/: Cargo.toml
libraries/protocol_event_writer/src/: lib.rs
libraries/sorted_linked_list/: Cargo.toml
libraries/sorted_linked_list/src/: lib.rs
