[package]
name = "lightning_cloud"
version = "0.1.0"
edition = "2021"
authors = ["Johannes Neyer"]
license = "MIT"

[dependencies]
protocol_event_writer = { path = "../../libraries/protocol_event_writer" }
anyhow = "1.0.79"
ciborium = "0.2.2"
cobs = "0.2.3"
colored = "2.1.0"
crc = "3.0.1"
defmt-decoder = { version = "0.3.9", features = ["unstable"] }
libc = "0.2.153"
mio = { version = "0.8.10", features = ["os-poll", "net", "os-ext"] }
object = "0.32.2"
serde = "1.0.196"
serde_bytes = "0.11.14"
