[package]
name = "lightning_firmware_for_stm32wl55"
version = "0.1.0"
edition = "2021"
authors = ["Johannes Neyer"]
license = "MIT"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = { version = "0.4.0", optional = true }
defmt-serial = { version = "0.10.0", optional = true }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
static_cell = "2.0.0"

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32wl55jc-cm4", "time-driver-any", "unstable-pac"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }

lora-phy = { git = "https://github.com/lora-rs/lora-rs.git" }
lora-modulation = { git = "https://github.com/lora-rs/lora-rs.git" }

protocol_api = { path = "../protocol/api", features = ["defmt"] }
lightning = { path = "../protocol/lightning", features = ["defmt"] }
postcard = { version = "1.0.8", features = ["use-defmt"] }
# postcard requires heapless 0.7
heapless = { version = "0.7", features = ["defmt-impl"] }

[profile.release]
# debug symbols don't increase size on Flash
debug = true

[features]
# TODO: cargo features are meant to be additive, this does not compile when both log-rtt and log-serial are enabled
# default = ["log-rtt"]
# default = ["log-serial"]
log-rtt = ["dep:defmt-rtt"]
log-serial = ["dep:defmt-serial"]
