[package]
name = "lightning"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
protocol_api = { path = "../api" }
defmt = { version = "0.3.5", optional = true }
log = { workspace = true }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
rand_core = "0.6.4"
heapless = { version = "0.8.0", features = ["serde"] }

[dev-dependencies]
rand = { version = "*" }

[features]
defmt = ["dep:defmt", "heapless/defmt-03"]
